--- a/evenementen/app/views/layouts/application.html.erb
+++ b/evenementen/app/views/layouts/application.html.erb
@@ -25,6 +25,25 @@
           <li><%= nav_link("Events", events_path) %></li>
           <li><%= nav_link("People", people_path) %></li>
         </ul>
+        <form class="navbar-form navbar-search navbar-right" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control search-bar animated" placeholder="Search events">
+            <div class="icon-search"><i class="glyphicon glyphicon-search"></i></div>
+            <ul class="dropdown-menu search-menu" role="menu">
+              <li class="search-item">
+                <div class="row">
+                  <div class="col-xs-1">
+                    <i class="glyphicon glyphicon-alert"></i>
+                  </div>
+                  <div class="col-xs-10">
+                      <strong>Something went wrong</strong><br>
+                      <small class="ellipsis">Contact your local sysadmin for details</small>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </form>
       </div>
     </div>
   </nav>
