Added people searching; fixed blur event

--- a/evenementen/app/views/layouts/application.html.erb
+++ b/evenementen/app/views/layouts/application.html.erb
@@ -27,17 +27,17 @@
         </ul>
         <form class="navbar-form navbar-search navbar-right" role="search">
           <div class="form-group">
-            <input type="text" class="form-control search-bar animated" placeholder="Search events">
+            <input type="text" class="form-control search-bar animated" placeholder="Search people and events">
             <div class="icon-search"><i class="glyphicon glyphicon-search"></i></div>
             <ul class="dropdown-menu search-menu" role="menu">
-              <li class="search-item">
+              <li class="search-item search-item-notfound">
                 <div class="row">
                   <div class="col-xs-1">
-                    <i class="glyphicon glyphicon-alert"></i>
+                    <i class="glyphicon glyphicon-remove"></i>
                   </div>
                   <div class="col-xs-10">
-                      <strong>Something went wrong</strong><br>
-                      <small class="ellipsis">Contact your local sysadmin for details</small>
+                      <strong>No results found</strong><br>
+                      <small><em>Try using less words or rephrasing your query</em></small>
                   </div>
                 </div>
               </li>
