--- a/evenementen/app/assets/stylesheets/application.css
+++ b/evenementen/app/assets/stylesheets/application.css
@@ -68,6 +68,7 @@ td {
 
 .navbar-search .search-menu {
   width: 400px;
+  padding: 0;
 }
 
 .navbar-search .search-menu .col-xs-1 {
@@ -75,7 +76,7 @@ td {
 }
 
 .navbar-search .search-menu .search-item {
-  padding: 5px 10px;
+  padding: 10px;
 }
 
 .navbar-search .search-menu .search-item:not(:last-child) {
