--- a/evenementen/app/assets/stylesheets/application.css
+++ b/evenementen/app/assets/stylesheets/application.css
@@ -1,18 +1,7 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
  *= require_tree .
  *= require_self
- *= require bootstrap/dist/css/bootstrap.min
+ *= require bootstrap/bootstrap
  */
 
 body {
@@ -20,9 +9,37 @@ body {
 }
 
 td {
-  white-space:  nowrap;
+  white-space: nowrap;
 }
 
 .td-fill {
   width:  100%;
+}
+
+/**
+ * Ellipsis
+ * 
+ * */
+
+.ellipsis {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ellipsis-sm {
+  max-width: 200px;
+}
+
+.ellipsis-md {
+  max-width: 300px;
+}
+
+.ellipsis-lg {
+  max-width: 400px;
+}
+
+.ellipsis-xl {
+  max-width: 500px;
 }
