--- a/evenementen/app/views/homepage/index.html.erb
+++ b/evenementen/app/views/homepage/index.html.erb
@@ -1,12 +1,74 @@
 <h1>Event management in Ruby on Rails</h1>
 
+<ol class="breadcrumb">
+  <li class="active">Home</li>
+</ol>
+
 <p>Welcome to the website that solves all your event management needs.</p>
 
-<hr />
-<h2><%= pluralize(Event.all.size, "Event") %></h2>
-<%= render 'events/events' %>
+<hr>
 
-<hr />
+<h2><%= pluralize(Event.all.size, "Event") %> <%= link_to "Manage events &raquo;".html_safe, events_path, :class => "btn btn-xs btn-default" %></h2>
+<% if Event.all.any? %>
+<table class="table" width="100%">
+  <tr>
+    <th>Title</th>
+    <th>Description</th>
+    <th>Startdate</th>
+    <th>Enddate</th>
+  </tr>
 
-<h2><%= pluralize(Person.all.size, "Person") %></h2>
-<%= render 'people/people' %>
+  <% Event.all.each do |event| %>
+  <tr>
+    <td>
+      <div class="ellipsis ellipsis-sm">
+        <%= link_to event.title, event_path(event) %>
+      </div>
+    </td>
+    <td>
+      <div class="ellipsis ellipsis-lg">
+        <%= event.text %>
+      </div>
+    </td>
+    <td><%= event.startdate.strftime("%d %b %Y %H:%M") %></td>
+    <td><%= event.enddate.strftime("%d %b %Y %H:%M") %></td>
+  </tr>
+  <% end %>
+</table>
+<% else%>
+  <div class="alert alert-warning" role="alert">There are no events at the moment.</div>
+<% end %>
+
+<hr>
+
+<h2>
+  <%= pluralize(Person.all.size, "Person") %> 
+  <%= link_to "Manage people &raquo;".html_safe, people_path, :class => "btn btn-xs btn-default" %>
+</h2>
+<% if Person.all.any? %>
+  <table class="table">
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Date of birth</th>
+    </tr>
+
+  <% Person.all.each do |person| %>
+    <tr>
+      <td>
+        <div class="ellipsis ellipsis-lg">
+          <%= link_to truncate(person.name, length: 50), person_path(person) %>
+        </div>
+      </td>
+      <td>
+        <div class="ellipsis ellipsis-lg">
+          <%= truncate(person.email, length: 50) %>
+        </div>
+      </td>
+      <td><%= person.birthdate.strftime("%d %B %Y") %></td>
+    </tr>
+  <% end %>
+  </table>
+<% else %>
+  <div class="alert alert-warning">There are no entries at the moment.</div>
+<% end %>
