--- a/evenementen/app/views/people/_form.html.erb
+++ b/evenementen/app/views/people/_form.html.erb
@@ -11,22 +11,32 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.text_field :name, :class => "form-control", :placeholder => :name, :required => "true" %>
+    <%= f.text_field :name,
+            :class => "form-control",
+            :placeholder => :name,
+            :required => "true" %>
   </div>
 
   <div class="form-group">
     <div class="input-group">
       <div class="input-group-addon">@</div>
-      <%= f.email_field :email, :class => "form-control", :placeholder => :email, :required => "true" %>
+      <%= f.email_field :email,
+              :class => "form-control",
+              :placeholder => :email,
+              :required => "true" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :birthdate %><br>
-    <%= f.date_select :birthdate, start_year: 1900, end_year: 2015 %>
+    <%= f.label :birthdate %>
+    <br>
+    <%= f.date_select :birthdate, start_year:
+            Rails.application.config.start_year,
+            end_year: Rails.application.config.end_year %>
   </div>
 
   <div class="form-group">
-    <%= f.submit 'Save', :class => "btn btn-success" %>
+    <%= f.submit 'Save',
+            :class => "btn btn-success" %>
   </div>
 <% end %>
