--- a/evenementen/app/views/people/index.html.erb
+++ b/evenementen/app/views/people/index.html.erb
@@ -5,6 +5,40 @@
   <li class="active">People</li>
 </ol>
 
-<%= render 'people' %>
+<% if Person.all.any? %>
+  <table class="table">
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Date of birth</th>
+      <th>Actions</th>
+    </tr>
+
+  <% Person.all.each do |person| %>
+    <tr>
+      <td>
+        <div class="ellipsis ellipsis-lg">
+          <%= link_to truncate(person.name, length: 50), person_path(person) %>
+        </div>
+      </td>
+      <td>
+        <div class="ellipsis ellipsis-lg">
+          <%= truncate(person.email, length: 50) %>
+        </div>
+      </td>
+      <td><%= person.birthdate.strftime("%d %B %Y") %></td>
+      <td>
+        <%= link_to 'Edit', edit_person_path(person), :class => "btn btn-xs btn-default" %>
+        <%= link_to 'Delete', person_path(person),
+                      method: :delete,
+                      data: { confirm: 'Are you sure?' }, :class => "btn btn-xs btn-danger" %>
+      </td>
+    </tr>
+  <% end %>
+  </table>
+<% else %>
+  <div class="alert alert-warning">There are no entries at the moment.</div>
+<% end %>
+
 
 <%= link_to 'Create person', new_person_path, :class => "btn btn-success" %>
