--- a/evenementen/app/views/layouts/application.html.erb
+++ b/evenementen/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Event Manager</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="shortcut icon" href="/favicon.png" />
   <%= csrf_meta_tags %>
 </head>
 <body>
